--- a/src/components/AuthExample.module.css
+++ b/src/components/AuthExample.module.css
@@ -1,13 +1,3 @@
-.authExampleContainer {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: rgb(50, 49, 48);
-}
-
 .authExampleContainer h1 {
     margin-bottom: 20px;
 }
@@ -29,8 +19,8 @@ section.buttonSection button {
     height: 30px;
     border: none;
     cursor: pointer;
-    background-color: rgb(0, 111, 201);
-    color: hsl(0, 0%, 100%);
+    background-color: var(--btnBlue);
+    color: #fff;
     margin-bottom: 2px;
 }
 
