--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,9 @@ code {
 
 :root {
   --textGrey: #4F4F4F;
-  --textLightGrey: #F2F2F2;
-  --btnBlue: #2F80ED;
+  --mediumGrey: #dadada;
+  --lightGrey: #F2F2F2;
   --ultraLightGrey: #F8F9FA;
+  --btnBlue: #2F80ED;
   --contentWidth: 1000px;
 }
