--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -2,14 +2,10 @@
  * Home - fonts, colours, background
  */
 #home {
-    background-color: var(--ultraLightGrey);
     color: var(--textGrey);
-    width: 100vw;
+    /* max-width: var(--contentWidth);
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin: 0 auto; */
 }
 
 #home h1,
@@ -40,8 +36,8 @@
     top: 0;
     left: 0;
     right: 0;
-    margin: 0 auto;
     max-width: var(--contentWidth);
+    margin: auto;
     padding: 30px 0;
     display: flex;
     justify-content: space-between;
@@ -75,11 +71,12 @@
 }
 
 /**
- * Dropdown nav menu 
+ * Dropdown nav menu
  */
 #header button#navExpandButton {
-    display: none;      /* display: block; using the media query below */
-   
+    display: none;
+    /* display: block; using the media query below */
+
     width: 60px;
     height: 60px;
     border: none;
@@ -127,18 +124,20 @@
  */
 
 main {
-    /* width: var(--contentWidth); */
+    max-width: var(--contentWidth);
+    margin: 30vh auto 0 auto;
 }
 
 article.welcome {
     display: flex;
     justify-content: space-between;
+    flex-flow: row wrap;
     gap: 120px;
 }
 
 @media screen and (max-width: 920px) {
     article.welcome {
-        flex-direction: column;
+        justify-content: center;
     }
 }
 
