--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: #F8F9FA;
+  background-color: var(--ultraLightGrey);
   font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
